--- a/src/app/users/user-show/user-show.component.html
+++ b/src/app/users/user-show/user-show.component.html
@@ -33,13 +33,15 @@
     </div>
 </div>
 <div multi="true" (scroll)="onScroll($event)" id="posts" *ngIf="posts.length">
-    <div class="post-div" *ngFor="let post of posts" (click)="gotoPost(post.id)">
+    <div tabindex="0" class="post-div" *ngFor="let post of posts" (click)="gotoPost(post.id)">
         <p class="username">by:
             <a routerLink="/user/{{post.creator}}">{{post.creatorname}}</a>
         </p>
         <p class="post-text">{{post.content}}</p>
         <div *ngIf="post.imagePath" class="post-image">
-            <img [src]="post.imagePath" [alt]="post.content.substring(0, 10)" loading="lazy">
+            <img tabindex="0" (keydown.ENTER)="focusImage(post.imagePath.toString())"
+                (click)="focusImage(post.imagePath.toString())" [src]="post.imagePath"
+                [alt]="post.content.substring(0, 10)" loading="lazy">
         </div>
         <div class="post-actions">
             <div *ngIf="userIsAuthenticated" class="heart-container">
@@ -88,7 +90,7 @@
                 </svg>
             </button>
             <div :id="dropdown{{post.id}}-1" class="dropdown-content">
-                <a class="dropdown-item" (click)="copyLink(post.id)">Copy Link</a>
+                <a class="dropdown-item" tabindex="0" (click)="copyLink(post.id)">Copy Link</a>
             </div>
             <button *ngIf="userIsAuthenticated && userId === post.creator" (click)="openDropdown(post.id + '-2')"
                 id="dropbtn" class="icon-button">
@@ -100,8 +102,17 @@
             </button>
             <div *ngIf="userIsAuthenticated && userId === post.creator" :id="dropdown{{post.id}}-2"
                 class="dropdown-content">
-                <a class="dropdown-item" (click)="onDelete(post.id)">Delete Post</a>
+                <a class="dropdown-item" tabindex="0" (click)="onDelete(post.id)">Delete Post</a>
             </div>
         </div>
     </div>
+</div>
+<div class="focused-image" id="focused-image">
+    <a tabindex="1" (keydown.ENTER)="unFocusImage()" (click)="unFocusImage()">
+        <svg xmlns="http://www.w3.org/2000/svg" height="32" class="close-button" fill="none" viewBox="0 0 24 24"
+            stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+        </svg>
+    </a>
+    <img id="focused-image-img" crossorigin="anonymous" [src]="focusedImage" [alt]="focusedImageAlt" loading="lazy">
 </div>
