--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
                 <line x1="16" y1="11" x2="16" y2="11.01"></line>
             </svg>
         </div>
-        <div *ngIf="userIsAuthenticated" tabindex="0" class="image" (click)="openDropdown()">
+        <div *ngIf="userIsAuthenticated && !Loading" tabindex="0" class="image" (click)="openDropdown()">
             <img src="https://images.unsplash.com/photo-1652533884588-d6fab03a68c9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=64&q=60"
                 height="32" crossorigin="anonymous" class="pfp" width="32">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" fill="none" viewBox="0 0 24 24" class="pfp-svg"
