--- a/src/app/users/user-show/user-show.component.css
+++ b/src/app/users/user-show/user-show.component.css
@@ -100,9 +100,9 @@
 }
 
 .show {
-    display: block;
-    visibility: visible;
-    opacity: 1;
+    display: block !important;
+    visibility: visible !important;
+    opacity: 1 !important;
 }
 
 .dropdown-item {
@@ -148,4 +148,55 @@
 
 .user-actions {
     width: fit-content;
+}
+
+.focused-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    opacity: 0;
+    display: none;
+    z-index: 20;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.focused-image img {
+    display: block;
+    width: fit-content;
+    height: fit-content;
+    max-width: 75%;
+    max-height: 75%;
+    object-fit: scale-down;
+    border-radius: 8px;
+    margin: auto auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.focused-image .close-button {
+    position: absolute;
+    top: 1.25rem;
+    right: 1.25rem;
+    cursor: pointer;
+    z-index: 25;
+}
+
+.close-button {
+    padding: 0.5rem;
+    border-radius: 50%;
+    transition: background-color 0.2s;
+}
+
+.close-button:hover {
+    background: #0000007e;
+}
+
+.close-button:focus {
+    outline: none;
+    background: #0000007e;
 }
